build/log/idf_py_stdout_output_9588
[1/10] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D C:\Users\test\Documents\Arduino\zal\brocker\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.3.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/test/Documents/Arduino/zal/brocker/build/bootloader/bootloader.bin"
Bootloader binary size 0x5490 bytes. 0x2b70 bytes (34%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/device_manager/CMakeFiles/__idf_device_manager.dir/device_manager.c.obj
FAILED: esp-idf/device_manager/CMakeFiles/__idf_device_manager.dir/device_manager.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/test/Documents/Arduino/zal/brocker/build/config -IC:/Users/test/Documents/Arduino/zal/brocker/components/device_manager/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_hw_support/port/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_rom/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/spi_flash/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.3.3/components/json/cJSON -IC:/Users/test/Documents/Arduino/zal/brocker/components/event_bus/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/test/Documents/Arduino/zal/brocker=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.3.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/device_manager/CMakeFiles/__idf_device_manager.dir/device_manager.c.obj -MF esp-idf\device_manager\CMakeFiles\__idf_device_manager.dir\device_manager.c.obj.d -o esp-idf/device_manager/CMakeFiles/__idf_device_manager.dir/device_manager.c.obj -c C:/Users/test/Documents/Arduino/zal/brocker/components/device_manager/device_manager.c
C:/Users/test/Documents/Arduino/zal/brocker/components/device_manager/device_manager.c: In function 'parse_config_json':
C:/Users/test/Documents/Arduino/zal/brocker/components/device_manager/device_manager.c:257:15: error: implicit declaration of function 'populate_config_from_json' [-Werror=implicit-function-declaration]
  257 |     bool ok = populate_config_from_json(cfg, root);
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/test/Documents/Arduino/zal/brocker/components/device_manager/device_manager.c: At top level:
C:/Users/test/Documents/Arduino/zal/brocker/components/device_manager/device_manager.c:827:13: error: conflicting types for 'populate_config_from_json'; have '_Bool(device_manager_config_t *, const cJSON *)'
  827 | static bool populate_config_from_json(device_manager_config_t *cfg, const cJSON *root)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/test/Documents/Arduino/zal/brocker/components/device_manager/device_manager.c:257:15: note: previous implicit declaration of 'populate_config_from_json' with type 'int()'
  257 |     bool ok = populate_config_from_json(cfg, root);
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
